5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1795_1596.log
== TEST (2019-05-30 17:08:15) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))

			 print(v)
	print(sum(v)/size(v),2
	min(v)
	max(v)
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:08:37) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))

print(v)
	#print(sum(v)/size(v),2
	#min(v)
	#max(v)
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:08:43) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))

print(v)
	#print(sum(v)/size(v),2
	#min(v)
	#max(v)
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:09:08) 
-- CODE:
from numpy import*
v = array((float(eval(input("Notas: ")))

print(v)
	#print(sum(v)/size(v),2
	#min(v)
	#max(v)
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:09:09) 
-- CODE:
from numpy import*
v = array((float(eval(input("Notas: ")))

print(v)
	#print(sum(v)/size(v),2
	#min(v)
	#max(v)
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:09:10) 
-- CODE:
from numpy import*
v = array((float(eval(input("Notas: ")))

print(v)
	#print(sum(v)/size(v),2
	#min(v)
	#max(v)
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:09:54) 
-- CODE:
from numpy import*
v = array(float(eval(input("Notas: ")))

print(v)
	#print(sum(v)/size(v),2
	#min(v)
	#max(v)
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:10:12) 
-- CODE:
from numpy import*
v = array(float(eval("Notas: "))

print(v)
	#print(sum(v)/size(v),2
	#min(v)
	#max(v)
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:10:13) 
-- CODE:
from numpy import*
v = array(float(eval("Notas: "))

print(v)
	#print(sum(v)/size(v),2
	#min(v)
	#max(v)
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:10:49) 
-- CODE:
from numpy import*
v = array(float("Notas: ")) #eval(,) 

print(v)
	#print(sum(v)/size(v),2
	#min(v)
	#max(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:11:30) 
-- CODE:
from numpy import*
v = array(float(input("Notas: ")) #eval(,) 

print(v)
	#print(sum(v)/size(v),2
	#min(v)
	#max(v)
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:12:53) 
-- CODE:
from numpy import*
v = array(float(input("Notas: ")) #eval(,) 

print(v)
	
	#print(sum(v)/size(v),2)
	#min(v)
	#max(v)
	
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:13:15) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")) #eval(,) 

print(v)
	
	#print(sum(v)/size(v),2)
	#min(v)
	#max(v)
	
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:13:20) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")) #eval(,) 

print(v)
	
	#print(sum(v)/size(v),2)
	#min(v)
	#max(v)
	
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:14:21) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")) #eval(,) 

print(v)
	
	#print(round(sum(v)/size(v),2))
	# - min(v)
	#max(v)
	
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:14:31) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")) #eval(,) 

print(v)
	
	#print(round(sum(v)/size(v),2))
	# - min(v)
	#max(v)
	
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:14:56) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")) #eval(,) 

print(v)
	
	#print(round(sum(v)/size(v),2))
	# - min(v)
	#max(v)
	
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:15:00) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

print(v)
	
	#print(round(sum(v)/size(v),2))
	# - min(v)
	#max(v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:15:34) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

print(v)
	
	#print(round(sum(v)/size(v),2))
	# - min(v)
	#max(v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:21:40) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)
v2 = round(sum(v)/size(v),2)

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:23:10) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)
v2 = size(v)
v3 = round(sum(v)/size(v),2)

print(v1)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:23:15) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)
v2 = size(v)
v3 = round(sum(v)/size(v),2)

print(v1)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:23:26) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)
v2 = size(v)
v3 = round(sum(v)/size(v),2)

print(v1)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:24:07) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)
v2 = size(v)
v3 = 
v3 = round(sum(v)/size(v),2)

print(v2)
-- ERROR:
File "XXXX", line 7
    v3 = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:24:10) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)
v2 = size(v)
v3 = 
v3 = round(sum(v)/size(v),2)

print(v2)
-- ERROR:
File "XXXX", line 7
    v3 = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:24:16) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)
v2 = size(v)
v3 = v2 - 1
v3 = round(sum(v)/size(v),2)

print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:24:21) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)
v2 = size(v)
v3 = v2 - 1
v3 = round(sum(v)/size(v),2)

print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:24:29) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)
v2 = size(v)
v3 = v2 - 1
v3 = round(sum(v)/size(v),2)

print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:25:19) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)
v2 = size(v)
v3 = v2 - 1

v4 = round(sum(v)/size(v),2)

#print(v2)
print(v3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:26:17) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)
v2 = size(v)
v3 = v2 - 1

v4 = round(sum(v)/size(v),2)

print(v2)
print(v3)
print(v4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:26:59) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)
v2 = size(v)
v3 = v2 - 1

v4 = round(sum(v)/size(v),2)

#print(v2)
print(v3)
print(v4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:27:42) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)
v2 = size(v)
v3 = v2 - 1  #v-1

v4 = round(sum(v)/size(v),2)

#print(v2)
print(v3)
print(v4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:29:04) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)

v2 = size(v)
v3 = v2 - 1  #v-1

v4 = sum(v)-min(v)
#v4 = round(sum(v)/size(v),2)

#print(v2)
print(v3)
print(v4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:29:26) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)

v2 = size(v)
v3 = v2 - 1  #v-1

v4 = sum(v)-min(v)
#v4 = round(sum(v)/size(v),2)

#print(v2)
#print(v3)
print(v4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:30:07) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)

v2 = size(v)
v3 = v2 - 1  #v-1

v4 = sum(v)-min(v)
v5 = v4/v3
#v4 = round(sum(v)/size(v),2)

#print(v2)
#print(v3)
print(v4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:30:17) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)

v2 = size(v)
v3 = v2 - 1  #v-1

v4 = sum(v)-min(v)
v5 = v4/v3
#v4 = round(sum(v)/size(v),2)

#print(v2)
#print(v3)
print(v4)
print(v5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:30:52) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)

v2 = size(v)
v3 = v2 - 1  #v-1

v4 = sum(v)-min(v)
v5 = v4/v3
#v4 = round(sum(v)/size(v),2)

#print(v2)
#print(v3)
print(v4)
print(v5)
-- EXECUTION TIME:
0.814417
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
13
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
6
2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:30:52) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)

v2 = size(v)
v3 = v2 - 1  #v-1

v4 = sum(v)-min(v)
v5 = v4/v3
#v4 = round(sum(v)/size(v),2)

#print(v2)
#print(v3)
print(v4)
print(v5)
-- EXECUTION TIME:
0.700845
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
13
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
6
2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:30:55) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

#print(v)
v1 = min(v)

v2 = size(v)
v3 = v2 - 1  #v-1

v4 = sum(v)-min(v)
v5 = v4/v3
#v4 = round(sum(v)/size(v),2)

#print(v2)
#print(v3)
print(v4)
print(v5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:31:52) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

v1 = min(v)
v2 = size(v)
v3 = v2 - 1  #v-1

v4 = sum(v)-min(v)
v5 = v4/v3
v6 = round(v5,2)

print(v6)
-- EXECUTION TIME:
0.353743
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
Notas: 3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
Notas: 2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:31:52) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

v1 = min(v)
v2 = size(v)
v3 = v2 - 1  #v-1

v4 = sum(v)-min(v)
v5 = v4/v3
v6 = round(v5,2)

print(v6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:31:56) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

v1 = min(v)
v2 = size(v)
v3 = v2 - 1  #v-1

v4 = sum(v)-min(v)
v5 = v4/v3
v6 = round(v5,2)

print(v6)
-- EXECUTION TIME:
0.901631
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:31:56) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

v1 = min(v)
v2 = size(v)
v3 = v2 - 1  #v-1

v4 = sum(v)-min(v)
v5 = v4/v3
v6 = round(v5,2)

print(v6)
-- EXECUTION TIME:
0.862842
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:32:00) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

v1 = min(v)
v2 = size(v)
v3 = v2 - 1  #v-1

v4 = sum(v)-min(v)
v5 = v4/v3
v6 = round(v5,2)

print(v6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:32:08) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

v1 = min(v)
v2 = size(v)
v3 = v2 - 1  #v-1

v4 = sum(v)-min(v)
v5 = v4/v3
v6 = round(v5,2)

print(v6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:32:30) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

v1 = min(v)
v2 = size(v)
v3 = v2 - 1  #v-1

v4 = sum(v)-min(v)
v5 = v4/v3
v6 = round(v5,2)

print(v6)
-- EXECUTION TIME:
0.464973
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:32:36) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: "))) #eval(,) 

v1 = min(v)
v2 = size(v)
v3 = v2 - 1

v4 = sum(v)-min(v)
v5 = v4/v3
v6 = round(v5,2)

print(v6)
-- EXECUTION TIME:
0.503338
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:32:49) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))

v1 = min(v)
v2 = size(v)
v3 = v2 - 1

v4 = sum(v)-min(v)
v5 = v4/v3
v6 = round(v5,2)

print(v6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:50:50) 
-- CODE:
from numpy import*
v = array(eval(input("Notas: ")))

v1 = min(v)
v2 = size(v)
v3 = v2 - 1

v4 = sum(v)-min(v)
v5 = v4/v3
v6 = round(v5,2)

print(v6)
-- EXECUTION TIME:
0.797928
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
